修改名查，及优化页面

--- a/WebContent/aboutMap/employee_drive_recode.html
+++ b/WebContent/aboutMap/employee_drive_recode.html
@@ -245,7 +245,7 @@
 				   <ul  id="imgExample" class="no-padding">
 				   		<li id="store">
 						   <div class="col-sm-3" id="storeimg" style="display:none;width:50px;"><img style="width:100%;" src="dist/img/storelogo.png"></div>
-						   <div class="col-sm-3" id="cityimg" ><img src="dist/img/splogo.png"></div>
+						   <div class="col-sm-3" id="cityimg" style="width:45px;"><img style="width:100%;" src="dist/img/splogo.png"></div>
 						   <div class="col-sm-9" style="width:60%">
 							   <p>门店 </p>
 						   </div>
