--- a/WebContent/data_access/observeManagement.html
+++ b/WebContent/data_access/observeManagement.html
@@ -30,7 +30,7 @@
 			var id = request['orgId'];
 			
 			function userAdd() {
-				window.location = "observeModify.html?id=" + id;
+				window.location = "observeModify.html?model_id=" + id;
 			}
             function modelAdd() {
                 window.location = "observeModify.html";
