屏蔽首页用户卡

--- a/WebContent/bizbase/indexMain.html
+++ b/WebContent/bizbase/indexMain.html
@@ -84,7 +84,8 @@
                     $("#appFrame").attr("src", "../indexs/szIndex_yadea.html");
                 }else {
                     //$("#appFrame").attr("src", "../workflow/toDoList.html");
-                    $("#appFrame").attr("src", "../indexs/data_index.html");
+                    //$("#appFrame").attr("src", "../indexs/data_index.html");
+                	$("#appFrame").attr("src", "../indexs/szIndex_yadea.html");
 				}
             }
 
