--- a/WebContent/crm/current_shopkeeper.html
+++ b/WebContent/crm/current_shopkeeper.html
@@ -2109,7 +2109,7 @@ function initStoreHistoryGMV(){
 						var info = JSON.parse(data.data);
 						var areaId = info.id;
 						var URL="?"+"area_name="+encode64(obj.name)+"&&store_id="+encode64(STORE_ID)+"&&area_id="+encode64(areaId);
-						window.open("area_detail.html"+URL);
+						window.open("costRenovation.html"+URL);
 					}else{
 						crm_alert(0,"此片区信息暂时不可查看！");
 					}
