--- a/WebContent/crm/storekeeper_user.html
+++ b/WebContent/crm/storekeeper_user.html
@@ -202,8 +202,8 @@ function getStoreKeeperInfo(){
 						$("#storename").html(curr_user.store);
 						$("#employee_no").html(curr_user.storeKeeper.employee_no);
 						$("#phone").html(curr_user.storeKeeper.phone);
-						$("#ordercount").html(curr_user.orderAmount);
-						$("#orderPricecount").html(curr_user.orderPriceAmount);
+						// $("#ordercount").html(curr_user.orderAmount);
+						// $("#orderPricecount").html(curr_user.orderPriceAmount);
 						$("#customercount").html(curr_user.customerAmount);
 						$("#expresscount").html(curr_user.expressAmount);
 						$("#relationcount").html(curr_user.relationAmount);
